Replace Apache Commons' Validate class with Guava's Preconditions